--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name" : "wechat1",
+  "name" : "wechat",
   "description" : "the new thinkphp framework",
   "require" : {
     "php" : ">=5.4.0",
